add presentation layer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LinioFavorites</string>
+    <string name="my_favorites_header">Todos mis favoritos</string>
 </resources>
